[gd_scene load_steps=3 format=3 uid="uid://cys03q34jt762"]

[ext_resource type="Script" path="res://scripts/menus/in_game_menu.gd" id="1_4hjsv"]
[ext_resource type="Theme" uid="uid://giidcej8oij7" path="res://asssets/ui/menu_theme.tres" id="2_sdrml"]

[node name="InGameMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4hjsv")

[node name="GridContainer" type="GridContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -44.0
offset_right = 100.0
offset_bottom = 44.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/h_separation = 0
theme_override_constants/v_separation = 8

[node name="Resume" type="Button" parent="GridContainer"]
custom_minimum_size = Vector2(200, 40)
layout_mode = 2
theme = ExtResource("2_sdrml")
theme_override_font_sizes/font_size = 24
text = "Resume"

[node name="MainMenu" type="Button" parent="GridContainer"]
custom_minimum_size = Vector2(200, 40)
layout_mode = 2
theme = ExtResource("2_sdrml")
theme_override_font_sizes/font_size = 24
text = "Main Menu"

[node name="Quit" type="Button" parent="GridContainer"]
custom_minimum_size = Vector2(200, 40)
layout_mode = 2
theme = ExtResource("2_sdrml")
theme_override_font_sizes/font_size = 24
text = "Quit"

[connection signal="pressed" from="GridContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="GridContainer/MainMenu" to="." method="_on_main_menu_pressed"]
[connection signal="pressed" from="GridContainer/Quit" to="." method="_on_quit_pressed"]
